# grafbase

./: .dockerignore  .env.development.local.example  .envrc.example  .eslintrc.js  .gitignore  .ignore  .prettierignore  .prettierrc.js  .prettierrc.json  .rules  .rules.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.federated  Dockerfile.standalone  README.md  README.old.md  SECURITY.md  bun.lockb  comp.md  config-schema.json  devenv.nix  extract_snapshot_expression.py  flake.nix  gateway.toml  grafbase.config.ts  index.html  index.mts  list.txt  package-lock.json  package.json  pnpm-lock.yaml  qp.md  registry.json  renovate.json  rust-toolchain.toml  (+5 more)
cli/: .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  PRIVACY.md  README.md  about.toml  build.rs  docker-entrypoint.sh  grafbase.config.ts  moon.yml  package-lock.json  package.json  result  rust-toolchain.toml  rustfmt.toml  test.ts  tsconfig.json
cli/.cargo/: .crates.toml  .crates2.json  config.toml
cli/.cargo/binstall/: crates-v1.json
cli/.config/: nextest.toml
cli/.github/: CODEOWNERS  pull_request_template.md
cli/.github/disabled-workflows/: coverage.yml
cli/.github/workflows/: build.yml  test.yml
cli/auth/: auth.ts
cli/changelog/: 0.1.0-pre.0.md  0.1.0-pre.1.md  0.1.0-pre.2.md  0.1.0-pre.3.md  0.1.0-pre.4.md  0.1.0-pre.5.md  0.1.0-pre.6.md  0.1.0-pre.7.md  0.10.0.md  0.10.1.md  0.100.0.md  0.101.0.md  0.102.1.md  0.102.3.md  0.102.4.md  0.102.5.md  0.103.0.md  0.104.0.md  0.105.1.md  0.105.2.md  0.11.0.md  0.11.2.md  0.12.0.md  0.13.0.md  0.14.0.md  0.14.1.md  0.15.0.md  0.17.0.md  0.18.0-rc.1.md  0.18.0-rc.2.md  0.18.0-rc.3.md  0.18.0-rc.4.md  0.18.0-rc.5.md  0.18.0-rc.6.md  0.18.0-rc.8.md  0.18.0.md  0.18.1.md  0.18.10.md  0.18.11.md  0.18.12.md  (+176 more)
cli/crates/axum-graphql-websockets/: Cargo.toml
cli/crates/backend/: Cargo.toml  build.rs
cli/crates/cli/: Cargo.toml  README.md  package.json
cli/crates/client-generator/: Cargo.toml
cli/crates/common/: Cargo.toml  build.rs
cli/examples/: delete_subgraph_changes.md  delete_subgraph_usage.md
cli/install/: cli  gateway  upload.sh
cli/install-scripts/: cli.sh
cli/nix/: cli.nix  udf-wrapper.nix  wrappers.nix
cli/resolvers/: goodbye.ts  hello.js
cli/scripts/: dev.sh  load-assets.sh
cli/src/: backend.rs  branch.rs  check.rs  cli_input.rs  common.rs  compose.rs  create.rs  dev.rs  errors.rs  extension.rs  introspect.rs  login.rs  logout.rs  main.rs  mcp.rs  plugins.rs  publish.rs  schema.rs  schema_proposal.rs  subgraph.rs  subgraphs.rs  trust.rs  upgrade.rs
cli/test2/: grafbase.config.ts  package-lock.json
cli/tests/: integration_tests.rs
cli/udf-wrapper/: .gitignore  Heap.20240105.164209.28712.0.001.heapprofile  README.md  bun-multi-wrapper.ts  dist.js  index.ts  main.mts  package-lock.json  package.json  tsconfig.json
cli/wrappers/: README.md  bun-multi-wrapper.ts  bun.lockb  dist.js  package-lock.json  package.json  parse-config.mts  parse-config.ts  tsconfig.json  udf.ts
common/dataloader/: Cargo.toml
common/dynamodb/: Cargo.toml  rust-toolchain.toml
common/dynaql/: ACKNOWLEDGEMENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  bacon.toml  feature-comparison.md  rust-toolchain.toml
common/gateway-protocol/: Cargo.toml
common/graph-entities/: Cargo.toml  README.md
common/graphql-extensions/: Cargo.toml
common/jwt-verifier/: Cargo.toml
common/log/: Cargo.toml
common/oidc/: Cargo.toml
common/parser/: Cargo.toml
common/parser-graphql/: Cargo.toml
common/parser-openapi/: Cargo.toml  README.md
common/registry-provider/: Cargo.toml
common/sdl-parser/: Cargo.toml
crates/cli/: Cargo.toml
crates/colorize/: Cargo.toml
crates/common/: Cargo.toml
crates/composition/: Cargo.toml
crates/dev-server/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine-config-builder/: Cargo.toml
engine/: .envrc.example  .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  DEVELOPMENT.md  README.md  config.toml  flake.nix  package.json  rust-toolchain.toml  rustfmt.toml
engine/.cargo/: config.toml
engine/.config/: nextest.toml
engine/async-runtime/: Cargo.toml
engine/dataloader/: Cargo.toml
engine/gateway-local/: Cargo.toml
engine/gateway-types/: Cargo.toml
engine/grafbase-engine/: ACKNOWLEDGEMENTS.md  Cargo.toml
engine/grafbase-engine-integration-tests/: Cargo.toml
engine/graph-entities/: rust-toolchain.toml
engine/nix/: engine-wasm.nix
engine/parser-openapi/: Cargo.toml  README.md
engine/parser-postgresql/: Cargo.toml
engine/registry-provider/: Cargo.toml
engine/search-protocol/: Cargo.toml
engine/test2/: grafbase.config.ts  package.json
gateway/: CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  about.hbs  about.toml  docker-compose.yml  licenses.html
gateway/changelog/: 0.1.0-rc.1.md  0.1.0-rc.10.md  0.1.0-rc.11.md  0.1.0-rc.13.md  0.1.0-rc.14.md  0.1.0-rc.15.md  0.1.0-rc.16.md  0.1.0-rc.17.md  0.1.0-rc.18.md  0.1.0-rc.19.md  0.1.0-rc.2.md  0.1.0-rc.20.md  0.1.0-rc.21.md  0.1.0-rc.22.md  0.1.0-rc.23.md  0.1.0-rc.24.md  0.1.0-rc.25.md  0.1.0-rc.3.md  0.1.0-rc.4.md  0.1.0-rc.5.md  0.1.0-rc.6.md  0.1.0-rc.7.md  0.1.0-rc.8.md  0.1.0-rc.9.md  0.1.0.md  0.10.0.md  0.11.0.md  0.11.1.md  0.12.0.md  0.13.0.md  0.13.1.md  0.14.0.md  0.15.0.md  0.16.0.md  0.17.0.md  0.18.0.md  0.19.0.md  0.19.1.md  0.2.0-rc.1.md  0.2.0-rc.2.md  (+82 more)
gateway/examples/: prometheus.toml
gateway/helm/: Chart.yaml  README.md  values.yaml
gateway/nix/: grafbase-gateway.nix
gateway/src/: args.rs  config.rs  main.rs  metrics.rs  prometheus.rs  server_runtime.rs  telemetry.rs
gateway/tests/: integration_tests.rs
gqlint/: Cargo.toml
gqlint/src/: main.rs
graph-ref/: Cargo.toml
graph-ref/src/: lib.rs
graphql-introspection/: Cargo.toml
graphql-introspection/src/: lib.rs  standard.rs  subgraph.rs
graphql-lint/: Cargo.toml  README.md
graphql-lint/benches/: benchmark.rs
graphql-lint/src/: lib.rs
repro/: Cargo.toml  wrangler.toml
repro/src/: lib.rs
(+10482 files in other folders)
