[package]
version = "0.82.4"
name = "grafbase"
description = "The Grafbase command line interface"
categories = ["command-line-utilities"]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
assert_matches = "1.5.0"
axum = { workspace = true, features = ["http1", "tokio"] }
backtrace = "0.3.71"
chrono = "0.4.38"
clap = { version = "4", features = ["cargo", "wrap_help", "derive", "env"] }
clap_complete = "4.5.2"
cli-table = { version = "0.4.9", default-features = false }
colored = "3.0.0"
const_format = "0.2.32"
crossterm = "0.28.1"
cynic = { workspace = true, features = ["http-reqwest"] }
dirs = "6.0.0"
expect-test = "1.5.0"
flate2 = "1.0.35"
fslock = "0.2.1"
futures.workspace = true
futures-util = "0.3.30"
indicatif = "0.17.8"
indoc.workspace = true
ignore = "0.4.22"
inquire = "0.7.5"
log = "0.4.21"
mimalloc = "0.1.41"
notify-debouncer-full = "0.5.0"
os_type = "2.6.0"
reqwest = { workspace = true, features = [
    "rustls-tls",
    "stream",
    "json",
], default-features = false }
rustls = { workspace = true, features = ["ring", "tls12"] }
serde = "1.0.199"
serde_derive = "1.0.199"
serde-dynamic-string.workspace = true
serde_json.workspace = true
serde-toml-merge = "0.3.8"
slugify = "0.1.0"
strum = { version = "0.26.2", features = ["derive"] }
syntect = "5.2.0"
tar.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["futures-io", "compat"] }
toml.workspace = true
tower-http = { workspace = true, features = ["trace", "fs", "set-header"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4"] }
webbrowser = "1.0"

federated-graph.workspace = true
federated-server.workspace = true
gateway-config.workspace = true
grafbase-graphql-introspection.workspace = true
graphql-composition.workspace = true
graphql-lint.workspace = true
graph-ref.workspace = true
grafbase-workspace-hack.workspace = true

[dev-dependencies]
async-graphql-axum.workspace = true
async-graphql.workspace = true
async-trait = "0.1.80"
async-tungstenite.workspace = true
axum.workspace = true
cfg-if = "1"
chrono = "0.4.38"
ctor.workspace = true
cynic-introspection.workspace = true
cynic.workspace = true
derive_builder = "0.20"
dirs = "6.0.0"
duct = "0.13.7"
fslock = "0.2.1"
futures-util = "0.3.30"
graphql-mocks.workspace = true
graphql-ws-client = { version = "0.11.0", features = ["tungstenite"] }
headers.workspace = true
hex.workspace = true
http.workspace = true
insta = { workspace = true, features = ["json", "redactions", "yaml"] }
json_dotpath = "1.1.0"
jwt-compact = { version = "0.8.0", default-features = false, features = [
    "clock",
    "rsa",
] }
more-asserts = "0.3.1"
multipart-stream = "0.1.2"
rand.workspace = true
regex = "1.10.4"
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
reqwest-eventsource = "0.6"
rsa = "0.9.6"
rstest = "0.24"
rstest_reuse = "0.7"
serde = { version = "1.0.199", features = ["derive"] }
sha2.workspace = true
strum = { version = "0.26.2", features = ["derive"] }
sysinfo = "0.33.0"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = "0.6.0"
url = "2.5.0"
which.workspace = true
wiremock.workspace = true

[build-dependencies]
cynic-codegen.workspace = true

[[bin]]
name = "grafbase"

[lints]
workspace = true
